--- a/styles/style.css
+++ b/styles/style.css
@@ -344,6 +344,14 @@ main .wrapper h1 {
   transition: -webkit-clip-path 500ms ease;
   transition: clip-path 500ms ease;
   transition: clip-path 500ms ease, -webkit-clip-path 500ms ease;
+  overflow: visible;
+}
+main .wrapper h1 span {
+  transition: -webkit-clip-path 500ms ease;
+  transition: clip-path 500ms ease;
+  transition: clip-path 500ms ease, -webkit-clip-path 500ms ease;
+  overflow: visible !important;
+  width: 100% !important;
 }
 
 .welcome-section .wrapper {
